<resources>
    <string name="app_name">Addverb_tech_assignment</string>
    <string name="country">Country: </string>
    <string name="capital">Capital: </string>
    <string name="region">Region: </string>
    <string name="sub_region">Sub-Region: </string>
    <string name="population">Population: </string>
    <string name="languages">Languages: </string>
    <string name="borders">Borders: </string>
    <string name="loading_countries">Loading Countries...</string>
    <string name="delete_saved_data">Delete Saved Data</string>
</resources>