<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"


    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:padding="5dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="45">

                        <ImageView
                            android:id="@+id/categoryImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="2dp"
                            android:padding="5dp"
                            android:scaleType="fitXY"


                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="55"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="2dp"
                                android:gravity="end"
                                android:paddingLeft="5dp"
                                android:text="@string/country"
                                android:textSize="12sp"

                                />

                            <TextView
                                android:id="@+id/textViewName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView5"
                                android:layout_marginStart="1dp"
                                android:elevation="2dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="5dp"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="2dp"
                                android:gravity="end"
                                android:paddingLeft="5dp"
                                android:text="@string/capital"
                                android:textSize="12sp"

                                />

                            <TextView
                                android:id="@+id/textViewCapital"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView5"
                                android:layout_marginStart="1dp"
                                android:elevation="2dp"
                                android:paddingEnd="5dp"

                                android:paddingBottom="5dp"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="73"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/region"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="2dp"
                                android:paddingLeft="5dp"
                                android:text="@string/region"
                                android:textSize="12sp"

                                />

                            <TextView
                                android:id="@+id/textViewRegion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView3"
                                android:layout_marginStart="1dp"
                                android:elevation="2dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="5dp"

                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/otp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="2dp"
                                android:paddingLeft="5dp"
                                android:text="@string/sub_region"
                                android:textSize="12sp"

                                />

                            <TextView
                                android:id="@+id/textViewSubRegion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="1dp"
                                android:elevation="2dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="5dp"

                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/Population"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="2dp"
                                android:paddingLeft="5dp"
                                android:text="@string/population"
                                android:textSize="12sp"

                                />

                            <TextView
                                android:id="@+id/textViewPopulation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="1dp"
                                android:elevation="2dp"
                                android:paddingEnd="5dp"

                                android:paddingBottom="5dp"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/languages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="2dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/languages"
                        android:textSize="12sp"

                        />

                    <TextView
                        android:id="@+id/textViewLanguages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:elevation="2dp"
                        android:paddingEnd="5dp"

                        android:paddingBottom="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"

                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/borders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="2dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/borders"
                        android:textSize="12sp"

                        />

                    <TextView
                        android:id="@+id/textViewBorders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:elevation="2dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"

                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darker_grey" />
</LinearLayout>
